# StatReport

./: .env.example  .gitignore  README.md  StatReport.command  app_main.py  bootstrap_r.R  install.ps1  install.sh  make_app.sh  pyproject.toml
.github/workflows/: build.yml
src/statreport/: __init__.py  cli.py  config.py  data_io.py  desktop.py  extract.py  gemini.py  pipeline.py  profile.py  pyengine.py  qa.py  rcode.py  recipe.py  rengine.py  server.py
src/statreport/web/: app.js  index.html  styles.css
tests/: test_desktop.py  test_extract.py  test_pipeline.py  test_r_engine.py  test_recipe.py
tests/sample/: example_report.md  sales.csv
